--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -185,7 +185,7 @@ a {
     font-weight: bold; }
   .main-content table th, .main-content table td {
     padding: 0.5rem 1rem;
-    border: 1px solid #e9ebec; }
+    /*border: 1px solid #e9ebec;*/ }
 .main-content dl {
   padding: 0; }
   .main-content dl dt {
@@ -203,22 +203,22 @@ a {
   background-color: #eff0f1;
   border: 0; }
 
-@media screen and (min-width: 64em) {
+/*@media screen and (min-width: 64em) {*/
   .main-content {
     max-width: 64rem;
     padding: 2rem 6rem;
     margin: 0 auto;
-    font-size: 1.1rem; } }
+    font-size: 1.1rem; }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
-  .main-content {
-    padding: 2rem 4rem;
-    font-size: 1.1rem; } }
+  /*.main-content {*/
+    /*padding: 2rem 4rem;*/
+    /*font-size: 1.1rem; } }*/
 
 @media screen and (max-width: 42em) {
-  .main-content {
-    padding: 2rem 1rem;
-    font-size: 1rem; } }
+  /*.main-content {*/
+    /*padding: 2rem 1rem;*/
+    /*font-size: 1rem; } }*/
 
 .site-footer {
   padding-top: 2rem;
