--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -1,4 +1,14 @@
-
+.project-name{
+    background: #fff url("../images/zhenhunjie.JPG");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.resume{
+    width: 832px;
+    margin: auto;
+}
 .main-content{
     width: 1024px;
 }
@@ -15,10 +25,11 @@
      font-weight: 500;
  }
  .main-content #table-left table td:nth-child(even){
-     color: #155799;
+     color: #F9F3F4;
  }
  .main-content #table-right table td:nth-child(odd){
      vertical-align: baseline;
+
  }
  .main-content table td:nth-child(even){
      width: 262px;
@@ -30,6 +41,9 @@
 .mypictrue{
     width: 120px;
     height: 120px;
+    border-radius: 60px;
+    position: relative;
+    z-index: 1;
     /*-moz-transform:rotate(-90deg);*/
     /*-webkit-transform:rotate(-90deg);*/
 }
@@ -49,27 +63,50 @@
 }
 .mypic-box{
     display: inline-block;
-    margin-left: 130px;
     width: 120px;
     height: 120px;
     border-radius: 60px;
     overflow: hidden;
     border: 1px solid transparent;
     box-shadow: #0e0e0e 0px 0px 5px 2px;
+    position: relative;
+    left: 355px;
+    cursor: pointer;
+}
+.mypic-box-back{
+    display: inline-block;
+    background-color: white;
+    color: silver;
+    height: 120px;
+    border-radius: 60px;
+    overflow: hidden;
+    border: 1px solid transparent;
+    box-shadow: #0e0e0e 0px 0px 5px 2px;
+    position: relative;
+    top: -250px;
+}
+.mypic-box-back-title{
+    width: 85px;
+    height: 50px;
+    margin: 30px auto;
+    font-size: 28px;
+    position: relative;
+    top: 40px;
+
 }
 #table-left{
     display: inline-block;
     /*background-color: #159957;*/
     width: 416px;
-    height: 1500px;
+    /*height: 1500px;*/
     float: left;
 }
 #table-right{
     display: inline-block;
     /*background-color: #155799;*/
     width: 416px;
-    height: 1500px;
-    color: #159957;
+    /*height: 1500px;*/
+    color: #05FF3A;
 }
 /*@media screen and (min-device-width: 1024px) {*/
     /*#table-left{*/
@@ -84,6 +121,9 @@
         /*width: 416px;*/
     /*}*/
 /*}*/
+.smalltitle-left, .smalltitle-right{
+    cursor: pointer;
+}
 .smalltitle-left{
     width: 200px;
     height: 48px;
@@ -133,17 +173,81 @@ table input{
     font-size: 14px;
 }
 
-.project-name:hover{
-    cursor: pointer;
-    font-size: 60px;
-    color: #5bb75b;
-}
+/*部分动画效果*/
 .project-name {
     transition: font-size 1s, color 1s;
+    -moz-transition: font-size 1s, color 1s;
+    -webkit-transition:  font-size 1s, color 1s;
+    -o-transition:  font-size 1s, color 1s;
 }
-.btn:hover{
-    transform: rotateY(360deg);
+.project-name:hover{
+    cursor: pointer;
+    font-size: 4em;
 }
+@media screen and (min-width: 64em) {
+    .project-name:hover {
+        font-size: 4rem; } }
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
+    .project-name:hover {
+        font-size: 2.75rem; } }
+
+@media screen and (max-width: 42em) {
+    .project-name:hover {
+        font-size: 2.25rem; } }
 .btn{
-    transition: transform 1s;
+        transition: transform 1s;
+        -moz-transition: transform 1s; /* Firefox 4 */
+        -webkit-transition: transform 1s; /* Safari 和 Chrome */
+        -o-transition: transform 1s; /* Opera */
+    }
+.btn:hover{
+        transform: rotateX(360deg);
+        -ms-transform:rotateX(360deg); 	/* IE 9 */
+        -moz-transform:rotateX(360deg); 	/* Firefox */
+        -webkit-transform:rotateX(360deg); /* Safari 和 Chrome */
+        -o-transform:rotateX(360deg); 	/* Opera */
+    }
+
+/*.mypictrue{*/
+    /*transition: transform 1s;*/
+/*}*/
+/*.mypic-box:hover{*/
+     /*transform: rotateY(180deg);*/
+     /*!*backface-visibility:hidden;*!*/
+     /*backface-visibility: visible;*/
+/*}*/
+.smalltitle-left,.smalltitle-right{
+    transition: width 1s;
+}
+.smalltitle-left:hover, .smalltitle-right:hover{
+    width: 300px;
+}
+table input:hover{
+    box-shadow: #155799 0px 0px 10px 1px;
+    border-radius: 15px;
+}
+.site-footer{
+    background: linear-gradient(360deg, #155799, #159957);
+    margin-top: 0px;
+    border: 0px;
+}
+.site-footer-credits,.site-footer-owner{
+    margin: 20px 50px;
+    color: #2A363C;
+    cursor: pointer;
+}
+.site-footer-credits{
+
+}
+.footer-content{
+    width: 832px;
+    margin: auto;
+}
+.whitespace{
+    display: inline-block;
+    font-size: 40px;
+    color: rgb(19,4,241);
+    opacity: 0.2;
+    cursor: pointer;
 }
