--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -203,22 +203,19 @@ a {
   background-color: #eff0f1;
   border: 0; }
 
-/*@media screen and (min-width: 64em) {*/
+@media screen and (min-width: 1024px) {
   .main-content {
-    max-width: 64rem;
+    width: 100%;
     padding: 2rem 6rem;
     margin: 0 auto;
-    font-size: 1.1rem; }
+    font-size: 1.1rem; }}
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  /*.main-content {*/
-    /*padding: 2rem 4rem;*/
-    /*font-size: 1.1rem; } }*/
+@media screen and (max-width: 1024px) {
+  .main-content{
+    width: 1024px;
+  }
+}
 
-@media screen and (max-width: 42em) {
-  /*.main-content {*/
-    /*padding: 2rem 1rem;*/
-    /*font-size: 1rem; } }*/
 
 .site-footer {
   padding-top: 2rem;
