--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -84,6 +84,7 @@
     box-shadow: #0e0e0e 0px 0px 5px 2px;
     position: relative;
     top: -250px;
+    opacity: 0.7;
 }
 .mypic-box-back-title{
     width: 85px;
@@ -92,7 +93,7 @@
     font-size: 28px;
     position: relative;
     top: 40px;
-
+    color: #155799;
 }
 #table-left{
     display: inline-block;
