--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -9,9 +9,23 @@
     width: 832px;
     margin: auto;
 }
-.main-content{
-    width: 1024px;
+@media screen {
+    .resume{
+        width: 100%;
+        margin: auto;
+    }
 }
+@media screen and (min-width: 1024px){
+    .main-content{
+        width: 1024px;
+    }
+}
+@media screen and (max-width: 736px){
+    .main-content{
+        width: 100%;
+    }
+}
+
  .main-content table td{
      height: 20px;
      padding: 2px 10px;
@@ -73,6 +87,13 @@
     left: 355px;
     cursor: pointer;
 }
+@media screen and (max-width: 736px){
+    .mypic-box{
+        margin: auto;
+        position: relative;
+        left: 250px;
+    }
+}
 .mypic-box-back{
     display: inline-block;
     background-color: white;
@@ -95,20 +116,35 @@
     top: 40px;
     color: #155799;
 }
-#table-left{
-    display: inline-block;
-    /*background-color: #159957;*/
-    width: 416px;
-    /*height: 1500px;*/
-    float: left;
+@media screen and (min-width: 736px){
+    #table-left{
+        display: inline-block;
+        /*background-color: #159957;*/
+        width: 416px;
+        /*height: 1500px;*/
+        float: left;
+    }
+    #table-right{
+        display: inline-block;
+        /*background-color: #155799;*/
+        width: 416px;
+        /*height: 1500px;*/
+        color: #05FF3A;
+    }
 }
-#table-right{
-    display: inline-block;
-    /*background-color: #155799;*/
-    width: 416px;
-    /*height: 1500px;*/
-    color: #05FF3A;
+
+@media screen and (max-width: 736px){
+    #table-left{
+        display: block;
+        float: right;
+    }
+    #table-right{
+        height: 1900px;
+        display: block;
+        color: #05FF3A;
+    }
 }
+
 /*@media screen and (min-device-width: 1024px) {*/
     /*#table-left{*/
         /*background-color: #159957;*/
@@ -125,28 +161,60 @@
 .smalltitle-left, .smalltitle-right{
     cursor: pointer;
 }
-.smalltitle-left{
-    width: 200px;
-    height: 48px;
-    background-color: #155799;
-    color: #159957;
-    font-size: 28px;
-    font-weight: 900;
-    text-align: right;
-    padding: 5px;
-    border-radius: 24px 0px 0px 24px;
+@media screen and (max-width: 736px){
+    .smalltitle-left{
+        float: right;
+        width: 200px;
+        height: 48px;
+        background-color: #155799;
+        color: #159957;
+        font-size: 28px;
+        font-weight: 900;
+        text-align: right;
+        padding: 5px;
+        border-radius: 24px 0px 0px 24px;
+    }
+    .smalltitle-left table{
+        float: right;
+    }
+    .smalltitle-right{
+        clear: both;
+        width: 200px;
+        height: 48px;
+        background-color: #159957;
+        color: #155799;
+        font-size: 28px;
+        font-weight: 900;
+        padding: 5px;
+        border-radius: 0px 24px 24px 0px;
+    }
 }
-.smalltitle-right{
-    clear: left;
-    width: 200px;
-    height: 48px;
-    background-color: #159957;
-    color: #155799;
-    font-size: 28px;
-    font-weight: 900;
-    padding: 5px;
-    border-radius: 0px 24px 24px 0px;
+@media screen and (min-width: 832px) {
+    .smalltitle-left{
+        float: right;
+        width: 200px;
+        height: 48px;
+        background-color: #155799;
+        color: #159957;
+        font-size: 28px;
+        font-weight: 900;
+        text-align: right;
+        padding: 5px;
+        border-radius: 24px 0px 0px 24px;
+    }
+    .smalltitle-right{
+        clear: left;
+        width: 200px;
+        height: 48px;
+        background-color: #159957;
+        color: #155799;
+        font-size: 28px;
+        font-weight: 900;
+        padding: 5px;
+        border-radius: 0px 24px 24px 0px;
+    }
 }
+
 textarea{
     resize: none;
     word-break: break-all;
