--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -46,6 +46,7 @@ a {
 @media screen and (max-width: 42em) {
   .btn {
     display: block;
+    text-align: center;
     width: 100%;
     padding: 0.75rem;
     font-size: 0.9rem; }
