--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -9,7 +9,7 @@
     width: 832px;
     margin: auto;
 }
-@media screen {
+@media screen and (max-width: 832px){
     .resume{
         width: 100%;
         margin: auto;
@@ -65,7 +65,12 @@
     color: yellow;
 }
 .mytable-style{
-    background-image: linear-gradient(120deg,#159957,#155799);
+    background-image: linear-gradient(90deg,#159957,#155799);
+}
+@media screen and (max-width: 736px){
+    .mytable-style{
+        background-image: linear-gradient(270deg,#159957,#155799);
+    }
 }
 .mytable-title{
     display: inline-block;
@@ -161,7 +166,7 @@
 .smalltitle-left, .smalltitle-right{
     cursor: pointer;
 }
-@media screen and (max-width: 736px){
+@media screen and (max-width: 832px){
     .smalltitle-left{
         float: right;
         width: 200px;
@@ -292,9 +297,10 @@ table input{
 .smalltitle-left:hover, .smalltitle-right:hover{
     width: 300px;
 }
-table input:hover{
+table input{
     box-shadow: #155799 0px 0px 10px 1px;
     border-radius: 15px;
+    background-color: #159957;
 }
 .site-footer{
     background: linear-gradient(360deg, #155799, #159957);
@@ -319,4 +325,13 @@ table input:hover{
     color: rgb(19,4,241);
     opacity: 0.2;
     cursor: pointer;
+}
+@media screen and (max-width: 736px){
+    .whitespace{
+        display: none;
+    }
+    .footer-content{
+        width: 100%;
+        margin: auto;
+    }
 }
