--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -94,9 +94,7 @@
 }
 @media screen and (max-width: 736px){
     .mypic-box{
-        margin: auto;
-        position: relative;
-        left: 250px;
+        margin-right: auto;
     }
 }
 .mypic-box-back{
