--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -94,7 +94,7 @@
 }
 @media screen and (max-width: 736px){
     .mypic-box{
-        margin-right: 400px;
+        float: inherit;
         position: relative;
         left: 40%;
     }
