--- a/stylesheets/mystyle.css
+++ b/stylesheets/mystyle.css
@@ -80,6 +80,14 @@
     top: -40px;
     padding-left: 10px;
 }
+#mypic-box{
+    width: 832px;
+}
+@media screen and (max-width: 736px){
+    #mypic-box{
+        width: 100%;
+    }
+}
 .mypic-box{
     display: inline-block;
     width: 120px;
@@ -96,7 +104,7 @@
     .mypic-box{
         float: inherit;
         position: relative;
-        left: 40%;
+        left: 20%;
     }
 }
 .mypic-box-back{
