--- a/smalltemplate/smartdata/css/mainpage.css
+++ b/smalltemplate/smartdata/css/mainpage.css
@@ -43,6 +43,11 @@
     }
 }
 #login-box{
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
     float: right;
     display: inline-block;
     width: 400px;
@@ -145,6 +150,10 @@
     position: relative;
     margin-left: 10px;
     margin-bottom: 10px;
+    outline: none;
+}
+.form-input:focus{
+    outline: none;
 }
 @media screen and (max-width: 1150px){
     .form-input{
@@ -162,12 +171,12 @@
     /*border-bottom: 1px solid silver;*/
 }
 #login input[type='text']{
-background-image: url('../image/icon/icons_03.gif');
+background-image: url('../images/icon/icons_03.gif');
 background-repeat: no-repeat;
 background-position: 5px 5px;
 }
 #login input[type='password']{
-background-image: url('../image/icon/icons_05.gif');
+background-image: url('../images/icon/icons_05.gif');
 background-repeat: no-repeat;
 background-position: 5px 5px;
 }
@@ -323,16 +332,16 @@ ul{
     margin-top: 10px;
     cursor: pointer;
     position: relative;
-    top: -4px;
+    top: 0px;
 }
 /*.card:hover{*/
     /*border: 1px solid #fff;*/
 /*}*/
 .card1{
-    background-image: url('../image/mainpage/map.png');
+    background-image: url('../images/mainpage/map.png');
 }
 .card2{
-    background-image: url('../image/mainpage/card2.png');
+    background-image: url('../images/mainpage/card2.png');
 }
 .card-word{
     /*transition: font-size 1s,width 1s;*/
@@ -386,7 +395,7 @@ ul{
     color: #fff;
     font-size: 20px;
     position: absolute;
-    top: -2px;
+    top: 0px;
 }
 @media screen and (max-width: 700px) {
     #small-card{
@@ -400,12 +409,18 @@ ul{
     list-style: none;
     width: 100%;
     height: 18%;
-    margin-top: 8px;
+    margin-top: 7px;
     display: inline-block;
     position: relative;
     overflow: hidden;
 }
+.small-function:first-child{
+    margin-top: 10px;
+}
 .card3,.card4{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     transition: border 1s,width 0.5s;
     -webkit-transition: border 1s,width 0.5s;
     -moz-transition: border 1s,width 0.5s;
@@ -428,11 +443,12 @@ ul{
     margin-top: 30px;
 }
 .card3:hover,.card4:hover{
+    /*outline: 1px solid #fff;*/
     border: 1px solid #fff;
 }
 .card3{
     display: inline-block;
-    width: 32%;
+    width: 31.5%;
     height: 100%;
 }
 .card-inside{
@@ -444,7 +460,7 @@ ul{
 }
 .card4{
     display: inline-block;
-    width: 65%;
+    width: calc(63% + 7px);
     height: 100%;
 }
 .card3-long{
@@ -452,12 +468,12 @@ ul{
     -webkit-transition: width 0.7s;
     -moz-transition: width 0.7s;
     -o-transition: width 0.7s;
-    width: 100%;
+    width: 99.5%;
     /*position: absolute;*/
 }
 .spe{
     display: inline-block;
-    width: 65%;
+    width: calc(63% + 7px);
     height: 100%;
     cursor: pointer;
     transition: transform 1s;
@@ -468,6 +484,18 @@ ul{
 }
 .spe:hover{
     transform: rotateX(360deg);
+}@media screen and (max-width: 1150px) {
+    .spe{
+        float: right;
+        margin-right: 3px;
+    }
+    .card-inside{
+        width: 28.5%;
+        margin-left: 14px;
+    }
+    .card3-long{
+        margin-left: 0px;
+    }
 }
 @media screen and (min-width: 1280px){
     #small-card{
@@ -496,13 +524,13 @@ ul{
         text-align: center;
     }
     .card3{
-        width: 31.6%;
+        width: 32%;
     }
     .card4{
-        width: 65.3%;
+        width: 65%;
     }
     .card-inside{
-        width: 31.4%;
+        width: 30%;
         margin-left: 0px;
     }
     .spe{
