--- a/smalltemplate/smartdata/css/tableBackground.css
+++ b/smalltemplate/smartdata/css/tableBackground.css
@@ -1,11 +1,18 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: "微软雅黑", Arial, sans-serif;
+}
+html,body{
+    height: 100%;
 }
 #maindata{
     clear: left;
     display: inline-block;
     width: 100%;
+    min-width: 500px;
+    height: 100%;
+    max-height: 500%;
     position: relative;
     -webkit-transition: width 0.5s;
     -moz-transition: width 0.5s;
@@ -15,12 +22,23 @@
 }
 .maindata-inner{
     width: 100%;
-    height: 565px;
+    height: 100% !important;
+    min-height: 400px;
+    /*height: 100%;*/
     margin: auto;
     background-color: #eff4f5;
 }
 .main-content{
     width: 95%;
+    /*height: 90%;*/
     margin: auto;
     padding-top: 30px;
+}
+h4{
+    font-size: 16px;
+    font-weight: 900;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    color: #666666;
+    font-family: "微软雅黑", Arial, sans-serif;
 }
