--- a/static/css/common.css
+++ b/static/css/common.css
@@ -6,3 +6,23 @@ html,body{
   font-size: 16px;
   color: #333333;
 }
+#toast{
+  position: absolute;
+  padding: 5px 10px;
+  background: rgba(0,0,0,.8);
+  color: #FFFFFF;
+  bottom: 50px;
+  margin: 0 auto;
+  z-index: 99999;
+  border-radius: 4px;
+  transition: opacity 3s;
+}
+.fade-out{
+    animation: fade 1s;
+}
+@keyframes fade{
+  0%{opacity: 1;}
+  70%{opacity: 1;}
+  100%{
+    opacity: 0;}
+}
